# cs184sp18_final

./: .gitignore  CMakeLists.txt  README.md
CGL/include/CGL/: vector3D.h
docs/: index.html  proposal.html  writeup.md
ext/: CMakeLists.txt
ext/nanogui/src/: glutil.cpp
learning/: data_reorganization.ipynb  train.ipynb
mitsuba/: blender.py  generateImages.sh  hetvol.bak  hetvol.exr  hetvol.xml  water.bak  water.exr  water.xml  water_0.exr  water_1.exr  water_10.exr  water_11.exr  water_12.exr  water_13.exr  water_14.exr  water_15.exr  water_16.exr  water_17.exr  water_18.exr  water_19.exr  water_2.exr  water_20.exr  water_21.exr  water_22.exr  water_23.exr  water_24.exr  water_25.exr  water_26.exr  water_27.exr  water_28.exr  water_29.exr  water_3.exr  water_30.exr  water_31.exr  water_32.exr  water_33.exr  water_34.exr  water_35.exr  water_36.exr  water_37.exr  (+30 more)
mitsuba/input/: mitsubaOrientation0.vol  mitsubaVoxel0.vol
scene/: dam_breaking.json  particles.json  particles2.json  particles_large.json  sphere.json
shaders/: SimpleFragmentShader.fragmentshader  SimpleVertexShader.vertexshader  camera.vert  particle.frag  phong.frag
src/: CMakeLists.txt  camera.h  cube.cpp  cube.h  fluid.cpp  fluid.h  fluidSimulator.cpp  fluidSimulator.h  main.cpp  mcubes.cpp  mcubes.h  metaballs.h  shader.cpp  types.h  utils.h
src/collision/: collisionObject.h  particle.cpp  particle.h  plane.cpp  plane.h  polygon.cpp  polygon.h  sphere.cpp  sphere.h  triangle.cpp  triangle.h
surfacing/: Determining isolevel value.ipynb
